<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:focusable="true"
    android:onClick="layoutOnClick" >


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1"
        android:id="@+id/tableLayout">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Monto S/."
                android:layout_column="0"

                />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="5"
                android:id="@+id/simulador_monto"
                android:layout_column="2"
                android:textAlignment="textEnd"
                android:text="5000" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="TEA %"
                android:layout_column="0"
            />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="5"
                android:id="@+id/simulador_tea"
                android:layout_column="2"
                android:textAlignment="textEnd"
                android:text="11.27" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="# Cuotas"
                android:layout_column="0"
                />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="5"
                android:id="@+id/simulador_cuotas"
                android:layout_column="2"
                android:textAlignment="textEnd"
                android:text="12" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Desembolso"
                android:layout_column="0"
                />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:ems="5"
                android:id="@+id/simulador_desembolso"
                android:layout_column="2"
                android:textAlignment="textEnd"
                android:textIsSelectable="false" />

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Cuota doble"
                android:layout_column="0"
                />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_column="2">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Julio"
                android:id="@+id/simulador_doble_julio"
                android:layout_marginRight="10dp"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Diciembre"
                android:id="@+id/simulador_doble_diciembre" />
            </LinearLayout>
        </TableRow>
        <!--
        <TableRow

            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="Desgravamen %"
                android:layout_column="0"
                />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="5"
                android:id="@+id/simulador_desgravamen"
                android:layout_column="2"
                android:textAlignment="textEnd" />
        </TableRow>
        -->
    </TableLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1"
        android:layout_below="@+id/tableLayout"
        android:layout_alignParentStart="true"
        android:layout_marginTop="36dp">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="36dp"
            >
            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Cuota Mensual"
                android:layout_column="0"
                />
            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="340,203.00"
                android:layout_column="2"
                android:id="@+id/simulador_TotalCuota"
                android:textAlignment="textEnd"
                android:textStyle="bold" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="36dp">
            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Total Intereses"
                android:layout_column="0"
                />
            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="340,203.00"
                android:layout_column="2"
                android:id="@+id/simulador_TotalInteres"
                android:textAlignment="textEnd"
                android:textStyle="bold" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="36dp">
            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="Total a pagar"
                android:layout_column="0"
                />
            <TextView
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="340,203.00"
                android:layout_column="2"
                android:id="@+id/simulador_TotalPagar"
                android:textAlignment="textEnd"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="24dp"></TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:text="Ver coutas"
                android:id="@+id/button"
                android:layout_column="1"

                android:onClick="gotoCuotas"
                android:background="@color/colorPrimary" />
        </TableRow>
    </TableLayout>
</RelativeLayout>
