...
    android:layout_height="fill_parent"
    tools:context="urp.arch.simuladorcredito.MainActivity">

    <ImageButton
        android:layout_width="@dimen/home_icon_width"
        android:layout_height="@dimen/home_icon_height"
        android:id="@+id/imageButton0"
        android:clickable="true"
        android:onClick="selectCreditType"
        android:tag="credito_generico"
        android:src="@drawable/credit_star"
        android:scaleType="fitCenter"
        android:padding="30dp"
...
